# interactive-ml-labs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md  USAGE.pl.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/interactive_ml_labs/: README.md  pyproject.toml
apps/interactive_ml_labs/src/interactive_ml_labs/: __init__.py  activation_scene.py  anomaly_detection_scene.py  boosting_scene.py  calibration_scene.py  class_imbalance_scene.py  clustering_scene.py  data_leakage_scene.py  decision_tree_scene.py  display.py  distance_metrics_scene.py  feature_importance_scene.py  feature_scaling_scene.py  fonts.py  gaussian_mixture_scene.py  gradient_scene.py  kmeans_intro_scene.py  knn_scene.py  linear_regression_scene.py  logistic_scene.py  manifest.py  model_comparison_scene.py  monitoring_scene.py  neural_network_scene.py  pca_scene.py  placeholder_scene.py  progress.py  pygame_app.py  random_forest_scene.py  readout_panel.py  registry.py  scene.py  settings.py  split_lab_scene.py  svm_margin_scene.py  time_series_scene.py  tsne_umap_scene.py  tuning_scene.py  ui_helpers.py
apps/interactive_ml_labs/tests/: test_activation_scene.py  test_anomaly_detection_scene.py  test_boosting_scene.py  test_calibration_scene.py  test_class_imbalance_scene.py  test_clustering_scene.py  test_data_leakage_scene.py  test_decision_tree_scene.py  test_distance_metrics_scene.py  test_feature_importance_scene.py  test_feature_scaling_scene.py  test_fonts.py  test_gaussian_mixture_scene.py  test_gradient_scene.py  test_kmeans_intro_scene.py  test_knn_scene.py  test_level_two_native_layouts.py  test_linear_regression_scene.py  test_logistic_scene.py  test_manifest_registry.py  test_model_comparison_scene.py  test_monitoring_scene.py  test_neural_network_scene.py  test_pca_scene.py  test_progress.py  test_pygame_shell.py  test_random_forest_scene.py  test_readout_panel.py  test_scene.py  test_settings.py  test_split_lab_scene.py  test_svm_margin_scene.py  test_time_series_scene.py  test_tsne_umap_scene.py  test_tuning_scene.py  test_ui_helpers.py
demos/level_1_fundamentals/01_gradient_descent_playground/: CHALLENGES.pl.md  README.md  THEORY.pl.md  pyproject.toml
demos/level_1_fundamentals/01_gradient_descent_playground/src/gradient_descent_playground/: __init__.py  algorithm.py  app.py  challenge.py  dataset.py  explanation.py  metrics.py  pygame_app.py  renderer.py  scene.py
demos/level_1_fundamentals/01_gradient_descent_playground/tests/: test_algorithm.py  test_challenge.py  test_dataset.py  test_explanation.py  test_import.py  test_metrics.py  test_pygame_modules.py
demos/level_1_fundamentals/02_knn_vote_map/: CHALLENGES.pl.md  README.md  THEORY.pl.md  pyproject.toml
demos/level_1_fundamentals/02_knn_vote_map/src/knn_vote_map/: __init__.py  app.py  challenge.py  classifier.py  dataset.py  decision_grid.py  explanation.py  metrics.py  pygame_app.py  renderer.py  scene.py
demos/level_1_fundamentals/02_knn_vote_map/tests/: test_challenge.py  test_classifier.py  test_dataset.py  test_decision_grid.py  test_explanation.py  test_import.py  test_metrics.py  test_pygame_modules.py
demos/level_1_fundamentals/03_logistic_regression_boundary_lab/: CHALLENGES.pl.md  README.md  THEORY.pl.md  pyproject.toml
demos/level_1_fundamentals/03_logistic_regression_boundary_lab/src/logistic_regression_boundary_lab/: __init__.py  algorithm.py  app.py  challenge.py  dataset.py  explanation.py  metrics.py  probability_grid.py  pygame_app.py  renderer.py  scene.py
demos/level_1_fundamentals/03_logistic_regression_boundary_lab/tests/: test_algorithm.py  test_algorithm_confusion_matrix.py  test_challenge.py  test_dataset.py  test_explanation.py  test_import.py  test_metrics.py  test_probability_grid.py  test_pygame_modules.py  test_scene.py
demos/level_1_fundamentals/04_decision_tree_splitter/: CHALLENGES.pl.md  README.md  THEORY.pl.md  pyproject.toml
demos/level_1_fundamentals/04_decision_tree_splitter/src/decision_tree_splitter/: __init__.py  app.py  challenge.py  dataset.py  explanation.py  impurity.py  manual_split.py  pygame_app.py  renderer.py  scene.py  split.py  stump.py  tree.py
demos/level_1_fundamentals/04_decision_tree_splitter/tests/: test_challenge.py  test_dataset.py  test_explanation.py  test_import.py  test_impurity.py  test_manual_split.py  test_pygame_modules.py  test_scene.py  test_split.py  test_stump.py  test_tree.py
demos/level_2_practical_ml/01_random_forest_bagging_lab/: CHALLENGES.pl.md  README.md  THEORY.pl.md  pyproject.toml
demos/level_2_practical_ml/01_random_forest_bagging_lab/src/random_forest_bagging_lab/: __init__.py  app.py  baseline.py  bootstrap.py  challenge.py  dataset.py  explanation.py  forest.py  pygame_app.py  renderer.py  report.py  scene.py  voting.py
demos/level_2_practical_ml/01_random_forest_bagging_lab/tests/: test_baseline.py  test_bootstrap.py  test_challenge.py  test_dataset.py  test_explanation.py  test_forest.py  test_import.py  test_pygame_modules.py  test_report.py  test_scene.py  test_voting.py
demos/level_2_practical_ml/02_boosting_mistake_lab/: CHALLENGES.pl.md  README.md  THEORY.pl.md  pyproject.toml
demos/level_2_practical_ml/02_boosting_mistake_lab/src/boosting_mistake_lab/: __init__.py  app.py  boosted_prediction.py  boosting_round.py  challenge.py  dataset.py  explanation.py  export.py  learner_weight.py  presets.py  pygame_app.py  renderer.py  report.py  sample_weight_update.py  scene.py  staged_history.py  trainer.py  weak_learner.py  weighted_error.py
demos/level_2_practical_ml/02_boosting_mistake_lab/tests/: test_boosted_prediction.py  test_boosting_round.py  test_challenge.py  test_dataset.py  test_explanation.py  test_export.py  test_import.py  test_learner_weight.py  test_presets.py  test_pygame_app.py  test_report.py  test_sample_weight_update.py  test_scene.py  test_staged_history.py  test_trainer.py  test_weak_learner.py  test_weighted_error.py  test_weighted_stump.py
docs/: architecture.md  learning_platform.md  levels.md  roadmap.md  unified_app_shell.md
