[project]
name = "interactive-ml-labs-workspace"
version = "0.1.0"
description = "Workspace for interactive machine learning teaching demos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/interactive_ml_labs",
    "packages/ml_lab_core",
    "demos/level_1_fundamentals/01_gradient_descent_playground",
    "demos/level_1_fundamentals/02_knn_vote_map",
    "demos/level_1_fundamentals/03_logistic_regression_boundary_lab",
    "demos/level_1_fundamentals/04_decision_tree_splitter",
    "demos/level_2_practical_ml/01_random_forest_bagging_lab",
    "demos/level_2_practical_ml/02_boosting_mistake_lab",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PL",     # pylint-inspired checks
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913", # Too many arguments; sometimes acceptable in UI/config code.
    "PLR2004", # Magic values are often acceptable in small visual/demo code.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]
"packages/*/tests/**/*.py" = ["PLR2004"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "packages/ml_lab_core/tests",
    "apps/interactive_ml_labs/tests",
    "tests",
]
