[project]
name = "interactive-ml-labs-app"
version = "0.1.0"
description = "Unified Pygame app shell for Interactive ML Labs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
interactive-ml-labs = "interactive_ml_labs.pygame_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interactive_ml_labs"]
