[project]
name = "interactive-ml-labs-app"
version = "0.1.0"
description = "Unified Pygame app shell for Interactive ML Labs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boosting-mistake-lab",
    "gradient-descent-playground",
    "knn-vote-map",
    "logistic-regression-boundary-lab",
    "pygame>=2.6.1",
]

[project.scripts]
interactive-ml-labs = "interactive_ml_labs.pygame_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interactive_ml_labs"]

[tool.uv.sources]
boosting-mistake-lab = { workspace = true }
gradient-descent-playground = { workspace = true }
knn-vote-map = { workspace = true }
logistic-regression-boundary-lab = { workspace = true }
