[project]
name = "gradient-descent-playground"
version = "0.1.0"
description = "Interactive gradient descent demo for machine learning education."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ml-lab-core",
]

[project.scripts]
gradient-descent-playground = "gradient_descent_playground.app:main"

[tool.uv.sources]
ml-lab-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"