[project]
name = "knn-vote-map"
version = "0.1.0"
description = "Interactive k-nearest neighbors classification demo for machine learning education."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ml-lab-core",
]

[project.scripts]
knn-vote-map = "knn_vote_map.app:main"

[tool.uv.sources]
ml-lab-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"