[project]
name = "decision-tree-splitter"
version = "0.1.0"
description = "Interactive decision tree splitting demo for machine learning education."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ml-lab-core",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
]

[project.scripts]
decision-tree-splitter = "decision_tree_splitter.app:main"
decision-tree-splitter-ui = "decision_tree_splitter.pygame_app:main"

[tool.uv.sources]
ml-lab-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
