[project]
name = "random-forest-bagging-lab"
version = "0.1.0"
description = "Interactive random forest and bagging demo for machine learning education."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decision-tree-splitter",
    "ml-lab-core",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
]

[project.scripts]
random-forest-bagging-lab = "random_forest_bagging_lab.app:main"
random-forest-bagging-lab-ui = "random_forest_bagging_lab.pygame_app:main"

[tool.uv.sources]
decision-tree-splitter = { workspace = true }
ml-lab-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
