[project]
name = "boosting-mistake-lab"
version = "0.1.0"
description = "Interactive boosting demo showing how sequential learners focus on previous mistakes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ml-lab-core",
]

[project.scripts]
boosting-mistake-lab = "boosting_mistake_lab.app:main"

[tool.uv.sources]
ml-lab-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"